--- a/src/view/windows/Overview.fxml
+++ b/src/view/windows/Overview.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import view.simple_panes.BankAccountList?>
 <?import view.simple_panes.GroupList?>
+<?import view.simple_panes.SumTable?>
 <?import view.simple_panes.TransactionChart?>
 <?import view.simple_panes.TransactionTabPane?>
 
@@ -39,7 +40,7 @@
             </Menu>
          </menus>
       </MenuBar>
-      <AnchorPane fx:id="pane" layoutY="25.0" prefHeight="580.0" prefWidth="983.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
+      <AnchorPane fx:id="pane" layoutX="14.0" layoutY="25.0" prefHeight="580.0" prefWidth="983.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="-14.0" AnchorPane.topAnchor="25.0">
          <children>
             <VBox alignment="TOP_CENTER" prefHeight="54.0" prefWidth="200.0" AnchorPane.rightAnchor="10.0">
                <children>
@@ -56,10 +57,11 @@
             <VBox alignment="TOP_CENTER" layoutX="187.0" layoutY="37.0" />
             <Button layoutX="45.0" layoutY="326.0" mnemonicParsing="false" onAction="#newTransaction" text="Neue Transaction" />
             <Button layoutX="52.0" layoutY="387.0" mnemonicParsing="false" onAction="#importTransactionViaPDF" text="Importieren" />
-            <BankAccountList layoutX="101.0" layoutY="54.0" prefHeight="181.0" prefWidth="240.0" />
-            <GroupList layoutX="430.0" layoutY="88.0" prefHeight="162.0" prefWidth="191.0" />
-            <TransactionTabPane layoutX="644.0" layoutY="163.0" prefHeight="145.0" prefWidth="580.0" />
-            <TransactionChart layoutX="209.0" layoutY="308.0" />
+            <BankAccountList layoutX="29.0" layoutY="27.0" prefHeight="181.0" prefWidth="123.0" />
+            <GroupList layoutX="167.0" layoutY="27.0" prefHeight="181.0" prefWidth="123.0" />
+            <TransactionTabPane layoutX="314.0" layoutY="27.0" prefHeight="238.0" prefWidth="580.0" />
+            <TransactionChart layoutX="156.0" layoutY="409.0" prefHeight="317.0" prefWidth="790.0" />
+            <SumTable layoutX="548.0" layoutY="276.0" prefHeight="162.0" prefWidth="722.0" />
          </children>
       </AnchorPane>
    </children>
