--- a/src/view/windows/Overview.fxml
+++ b/src/view/windows/Overview.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -59,9 +60,10 @@
             <Button layoutX="52.0" layoutY="387.0" mnemonicParsing="false" onAction="#importTransactionViaPDF" text="Importieren" />
             <BankAccountList fx:id="vb_bankAccounts" layoutX="29.0" layoutY="27.0" prefHeight="181.0" prefWidth="123.0" />
             <GroupList fx:id="vb_groups" layoutX="167.0" layoutY="27.0" prefHeight="181.0" prefWidth="123.0" />
-            <TransactionTabPane fx:id="tp_transactions" layoutX="314.0" layoutY="27.0" prefHeight="238.0" prefWidth="580.0" />
-            <TransactionChart fx:id="ch_transaction" layoutX="156.0" layoutY="409.0" prefHeight="317.0" prefWidth="790.0" />
-            <SumTable fx:id="tl_groupSums" layoutX="548.0" layoutY="276.0" prefHeight="162.0" prefWidth="722.0" />
+            <TransactionTabPane fx:id="tp_transactions" layoutX="314.0" layoutY="27.0" prefHeight="197.0" prefWidth="732.0" />
+            <TransactionChart fx:id="ch_transaction" layoutX="314.0" layoutY="407.0" prefHeight="317.0" prefWidth="790.0" />
+            <SumTable fx:id="tl_groupSums" layoutX="314.0" layoutY="245.0" prefHeight="162.0" prefWidth="722.0" />
+            <ProgressBar fx:id="pb_pdf" layoutX="67.0" layoutY="484.0" prefWidth="200.0" progress="0.0" />
          </children>
       </AnchorPane>
    </children>
