--- a/src/view/windows/Overview.fxml
+++ b/src/view/windows/Overview.fxml
@@ -15,6 +15,7 @@
 <?import view.simple_panes.TransactionTabPane?>
 <?import view.simple_panes.StoreClassList?>
 
+<?import view.simple_panes.BankAccountList?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="766.0" prefWidth="1259.0" styleClass="main" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windows.OverviewWindowCtrl">
    <children>
       <MenuBar prefHeight="25.0" prefWidth="1182.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
@@ -58,7 +59,7 @@
             <VBox alignment="TOP_CENTER" layoutX="187.0" layoutY="37.0" />
             <Button layoutX="45.0" layoutY="326.0" mnemonicParsing="false" onAction="#newTransaction" text="Neue Transaction" />
             <Button layoutX="52.0" layoutY="387.0" mnemonicParsing="false" onAction="#importTransactionViaPDF" text="Importieren" />
-            <StoreClassList fx:id="vb_bankAccounts" layoutX="29.0" layoutY="27.0" prefHeight="181.0" prefWidth="123.0" />
+            <BankAccountList fx:id="vb_bankAccounts" layoutX="29.0" layoutY="27.0" prefHeight="181.0" prefWidth="123.0" />
             <GroupList fx:id="vb_groups" layoutX="167.0" layoutY="27.0" prefHeight="181.0" prefWidth="123.0" />
             <TransactionTabPane fx:id="tp_transactions" layoutX="314.0" layoutY="27.0" prefHeight="197.0" prefWidth="732.0" />
             <TransactionChart fx:id="ch_transaction" layoutX="314.0" layoutY="407.0" prefHeight="317.0" prefWidth="790.0" />
